# apppack

./: README.md  build.sh
apppack/: AppPack.desktop  AppRun  apppack-post-install.sh  apppack-post-uninstall.sh  apppack-pre-install.sh  apppack.json
builder/: CMakeLists.txt  common.h  compressor.h  dependency_analyzer.cpp  dependency_analyzer.h  desktop_parser.cpp  desktop_parser.h  file_utils.h  main.cpp  packager.cpp  packager.h  template_manager.cpp  template_manager.h
common/: common.h  compressor.cpp  compressor.h  file_utils.cpp  file_utils.h
doc/: architecture.md  developer-guide.md  user-guide.md
examples/hello/: CMakeLists.txt  main.cpp
examples/hello/apppack/: AppRun  HelloWorld.desktop  apppack-post-install.sh  apppack-post-uninstall.sh  apppack-pre-install.sh  apppack-pre-upgrade.sh  apppack.json
examples/hello/apppack/usr/share/HelloWorld/: settings.conf
installer/: CMakeLists.txt  common.h  compressor.h  desktop_integration.cpp  desktop_integration.h  file_utils.cpp  file_utils.h  header_reader.cpp  header_reader.h  installer.cpp  installer.h  main.cpp  script_runner.cpp  script_runner.h  uninstaller.cpp  uninstaller.h
tests/: CMakeLists.txt  test_common.cpp  test_deps.cpp  test_installer.cpp  test_integration.cpp  test_packager.cpp
